--- a/CSS/general.css
+++ b/CSS/general.css
@@ -6,4 +6,6 @@ body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow-x: hidden;
+
 }
