--- a/CSS/story.css
+++ b/CSS/story.css
@@ -77,15 +77,32 @@
     min-width: 100%;
 }
 
+.StoryDiv::before{
+    content:"";
+    position: absolute;
+    background-image: var(--BG);
+    background-size: cover;
+    background-position: center;
+    top:-2.5%;
+    left: 0px;
+    width: 100%;
+    height: 105%;
+    z-index: -1;
+    filter: blur(10px); 
+}
+
 .allLostBelt{
     display: flex;
-    overflow-x:hidden;
+    transition:all 0.3s ease-in-out
 }
 
 .BGdiv{
     width: 100%;
     height: 100%;
-    position: relative;   
+    position: relative;  
+    background-image: var(--BG);
+    background-size: cover;
+    background-position: center; 
 }
 
 .StoryLogo,
@@ -117,7 +134,6 @@
     right: 2%;
     filter: drop-shadow(0px 0px 10px #8bcaf1);
 }
-
 
 .BannerStoryDiv{
     width: 100%;
